# dntat

./: LICENSE  README.md
chac/: CMakeLists.txt  README.md
chac/src/: chac_protocol.cpp  main.cpp
dntat/: CMakeLists.txt  README.md
dntat/inc/: dntat_ps.h
dntat/src/: dntat_ps.cpp  test2.cpp  test_aggregation.cpp  test_debug.cpp  test_dntat.cpp  test_full_debug.cpp  test_multi_signer.cpp  test_simple.cpp  test_single_sigma.cpp
ntat_pairing/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
ntat_pairing/inc/: ntat_pairing.h
ntat_pairing/src/: benchmark.cpp  ntat_pairing.cpp  test_simple.cpp
uprove/: CMakeLists.txt  README.md
uprove/src/: main.cpp  uprove_protocol.cpp
